cluster/media/prowlarr-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: oauth2-proxy-oauth2-admin-errors@kubernetescrd,oauth2-proxy-oauth2-admin-auth@kubernetescrd,traefik-strip-csp@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mm-prowlarr
                port:
                  number: 9696
